CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

project(ccfx)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ".")

SET(Boost_USE_MULTITHREADED ON) 

FIND_PACKAGE(Boost COMPONENTS thread REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

FIND_PACKAGE(JNI REQUIRED)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
LINK_DIRECTORIES(${PYTHON_LIBRARY_DIRS})

FIND_PACKAGE(ICU REQUIRED)
INCLUDE_DIRECTORIES(${ICU_INCLUDE_DIRS})
LINK_DIRECTORIES(${ICU_LIBRARIES})

INCLUDE_DIRECTORIES(common)

ADD_DEFINITIONS(-g -O2 -fpermissive -DOS_UBUNTU -DLITTLE_ENDIAN)

ADD_SUBDIRECTORY(utility/picosellib ubuntu32)
ADD_SUBDIRECTORY(picosel ubuntu32)
ADD_SUBDIRECTORY(ccfx/CCFinderXLib ubuntu32)
ADD_SUBDIRECTORY(torq/pyeasytorq ubuntu32/scripts)

ADD_SUBDIRECTORY(ccfx ubuntu32)


